--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "locale-emoji": "^0.3.0",
     "mixpanel": "^0.17.0",
     "swagger-stats": "^0.99.4"
   },
