--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "country-locale-map": "^1.8.11",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jaro-winkler": "^0.2.8",
     "locale-emoji": "^0.3.0",
     "mixpanel": "^0.17.0",
-    "swagger-stats": "^0.99.4"
+    "needle": "^3.2.0",
+    "parse-torrent-title": "^1.3.0",
+    "swagger-stats": "^0.99.4",
+    "url-exists": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
