--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "locale-emoji": "^0.3.0",
     "mixpanel": "^0.17.0",
     "needle": "^3.2.0",
-    "parse-torrent-title": "^1.3.0",
+    "parse-torrent-title": "github:TheBeastLT/parse-torrent-title#2ece588b19d64da6726804b9b18842897b34ffc7",
     "swagger-stats": "^0.99.4",
     "url-exists": "^1.0.3"
   },
