--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "pm2 start index.js"
+    "start": "node index.js 2>&1 | tee app.log"
   },
   "author": "",
   "license": "ISC",
@@ -18,7 +18,6 @@
     "express": "^4.18.2",
     "locale-emoji": "^0.3.0",
     "mixpanel": "^0.17.0",
-    "pm2": "^5.2.2",
     "swagger-stats": "^0.99.4"
   },
   "devDependencies": {
