--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon index.js",
-    "start": "node index.js 2>&1 | tee dist/app.log"
+    "start": "node index.js 2>&1 | tee vue/dist/app.log"
   },
   "author": "",
   "license": "ISC",
